resources/css/index.css
:root {
  background-image: url(../images/Aus.jpeg);
	background-repeat: no-repeat; 
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
	font-size: 100%;
	width: 100vw;
	height: 100vh;
}
*{
	box-sizing: border-box;
	font-family: Georgia, 'Times New Roman', Times, serif;
	margin: 0;
	padding: 0;
}
.page-container {
  width: 100vw;
  height: 100vh;
}
.landing-box-front {
  background-color:rgba(245, 249, 247, 0.762);
  background-repeat: no-repeat; 
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  overflow-y: hidden;
  width: 100%;
  height: 100%;
}
.title {
  padding-top: 30px;
  width: 100%;
  height: auto;
  text-align: center;
  color: black;
  font-weight: bold;
  margin-left: auto;
  margin-right: auto;
}
.clock-box {
  width:100%;
  display: block;
  padding: 5px;
  text-decoration: none;
  color: black;
  font-weight: 700;
}
.clock, .date{
  text-align: center;
  font-size: 1rem;
}

.landing-content-box{
  width: 755px;
  height: 1000px;
  display: flex;
  margin-top: 50px;
  margin-left: auto;
  margin-right: auto;
  padding: 12px 0;
  background: linear-gradient(#454f59 50%, #6b6954 50%);
  border-radius: 20px;
  overflow-y: hidden;
  position: relative;
}

.landing-content-panel {
  width: 150px;
  height: 100px;
  margin: auto;
  padding-top: 10px;
  background-color: #8c8b85;
  border-top: 5px solid #000;
  border-bottom: 5px solid #000;
  font-size: 1rem;
  font-weight: bold;
  color: #000;
}

.landing-content-inside {
  flex: 1;
  margin-left: 20px;
  height: 900px;
  background-color: rgb(255, 254, 254);
  border-radius: 20px;
  padding: 1.5rem 1rem;
}
.landing-content-top {
  width: 100%;
  display: flex;
  flex-direction: row;
}
#landing-title {
width: 70%;
text-align: center;
font-size: 1.4rem;
}
#landing-content-img {
  width: 30%;
}
#landing-content-img img {
  width: 100%;
}

.landing-content-text {
  padding-top: 30px;
  width:100%;
  text-align: center;
  font-size: 1.2rem;
  color: #0a0a09;
  font-weight: 600;
  line-height: 1.4rem;
}
.landing-nav-box {
  display: flex;
  flex-direction: column;
  margin-top: 50px;
}

.landing-button-box{
  margin-left: auto;
  margin-right: auto;
  margin-top: 25px;
  width: 309px;
  height: 60px;
  background-image: url(../images/button.png);
  border-radius: 30px;
  border: 2px solid black;
}

.landing-button-box:hover {
  cursor: pointer;
  box-shadow: 0 0.4rem 1.4rem 0 rgb(1, 4, 25);
	transform: translate(-0.2rem);
	transition: transform 150ms;
}
.landing-button-box p {
  font-size: 1.4rem;
  font-weight: 500;
  color: whitesmoke;
  margin-left: -40px;
}
@media (max-width: 1170px){
	.landing-content-box {
    width: 100vw;
  }
}

